[tool.poetry]
name = "py-sumo-history"
version = "0.1.0"
description = ""
authors = ["Dave Stanton <davestanton.us@gmail.com>"]
readme = "README.md"
packages = [{include = "py_sumo_history"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.5"
uvicorn = "^0.32.0"

[tool.poetry.scripts]
start = "uvicorn fastapi_hepy_sumo_history.main:app --host 0.0.0.0 --port 8000 --reload"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
